--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,8 @@
 
 cmake_minimum_required(VERSION 3.10)
 
-project(asplib)
+project(asplib
+    VERSION 0.1.0.0)
 
 option(BUILD_FOR_HOST
     "Enable/disable building tools for the host environment"
