--- a/crc/CMakeLists.txt
+++ b/crc/CMakeLists.txt
@@ -2,7 +2,7 @@
 # Asp CRC library build specification.
 #
 
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.5)
 
 project(asp-crc
     VERSION 0.1.0.0
@@ -27,6 +27,12 @@ if(BUILD_FOR_TARGET)
         set_property(TARGET asp-crc
             PROPERTY C_VISIBILITY_PRESET hidden)
     endif()
+
+    target_compile_definitions(asp-crc PRIVATE
+        $<$<BOOL:${ENABLE_DEBUG}>:ASP_LIB_DEBUG>
+        $<$<BOOL:${BUILD_SHARED_LIBS}>:USING_SHARED_LIBS>
+        ASP_EXPORT_LIB_API
+        )
 
     install(TARGETS asp-crc)
 
