Added target install destinations for the benefit of older versions of CMake.

--- a/codec/CMakeLists.txt
+++ b/codec/CMakeLists.txt
@@ -33,7 +33,9 @@ if(BUILD_FOR_TARGET)
         ASP_EXPORT_LIB_API
         )
 
-    install(TARGETS asp-codec)
+    install(TARGETS asp-codec
+        DESTINATION lib
+        )
 
 endif()
 
