--- a/crc/CMakeLists.txt
+++ b/crc/CMakeLists.txt
@@ -11,42 +11,49 @@ project(asp-crc
 
 set(ABI_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR})
 
-if(BUILD_FOR_TARGET)
+set(CMAKE_C_STANDARD 99)
+set(CMAKE_C_STANDARD_REQUIRED True)
 
-    set(CMAKE_C_STANDARD 99)
-    set(CMAKE_C_STANDARD_REQUIRED True)
+add_library(asp-crc
+        lib-crc.c
+        crc.c
+        )
 
-    add_library(asp-crc
-            lib-crc.c
-            crc.c
-            )
-
+set_property(TARGET asp-crc
+    PROPERTY VERSION ${ABI_VERSION})
+if(BUILD_SHARED_LIBS)
     set_property(TARGET asp-crc
-        PROPERTY VERSION ${ABI_VERSION})
-    if(BUILD_SHARED_LIBS)
-        set_property(TARGET asp-crc
-            PROPERTY C_VISIBILITY_PRESET hidden)
-    endif()
-
-    target_compile_definitions(asp-crc PRIVATE
-        $<$<BOOL:${ENABLE_DEBUG}>:ASP_LIB_DEBUG>
-        $<$<BOOL:${BUILD_SHARED_LIBS}>:USING_SHARED_LIBS>
-        ASP_EXPORT_LIB_API
-        )
-
-    install(TARGETS asp-crc
-        DESTINATION lib
-        )
-
+        PROPERTY C_VISIBILITY_PRESET hidden)
 endif()
 
-if(BUILD_FOR_HOST)
+target_compile_definitions(asp-crc PRIVATE
+    $<$<BOOL:${ENABLE_DEBUG}>:ASP_LIB_DEBUG>
+    $<$<BOOL:${BUILD_SHARED_LIBS}>:USING_SHARED_LIBS>
+    ASP_EXPORT_LIB_API
+    )
+
+if(BUILD_SHARED_LIBS)
+    install(TARGETS asp-crc
+        DESTINATION lib
+        COMPONENT Runtime
+        )
+endif()
+
+if(INSTALL_DEV)
+
+    if(NOT BUILD_SHARED_LIBS)
+        install(TARGETS asp-crc
+            DESTINATION lib
+            COMPONENT Development
+            )
+    endif()
 
     if(WIN32)
 
         install(FILES
             crc.asps
             DESTINATION ${CMAKE_INSTALL_PREFIX}/../asp/include/asps
+            COMPONENT Development
             )
 
     else()
@@ -54,6 +61,7 @@ if(BUILD_FOR_HOST)
         install(FILES
             crc.asps
             DESTINATION include/asps
+            COMPONENT Development
             )
 
     endif()
