--- a/sort/CMakeLists.txt
+++ b/sort/CMakeLists.txt
@@ -1,12 +1,12 @@
 #
-# Asp codec library build specification.
+# Asp sort library build specification.
 #
 
 cmake_minimum_required(VERSION 3.5)
 
 file(STRINGS version.txt VERSION)
 
-project(asp-codec
+project(asp-sort
     VERSION ${VERSION}
     LANGUAGES C
     )
@@ -16,25 +16,26 @@ set(ABI_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR})
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED True)
 
-add_library(asp-codec
-    lib-codec.c
+add_library(asp-sort
+    lib-sort.c
+    lib-sorted.c
     )
 
-set_property(TARGET asp-codec
+set_property(TARGET asp-sort
     PROPERTY VERSION ${ABI_VERSION})
 if(BUILD_SHARED_LIBS)
-    set_property(TARGET asp-codec
+    set_property(TARGET asp-sort
         PROPERTY C_VISIBILITY_PRESET hidden)
 endif()
 
-target_compile_definitions(asp-codec PRIVATE
+target_compile_definitions(asp-sort PRIVATE
     $<$<BOOL:${ENABLE_DEBUG}>:ASP_LIB_DEBUG>
     $<$<BOOL:${BUILD_SHARED_LIBS}>:USING_SHARED_LIBS>
     ASP_EXPORT_LIB_API
     )
 
 if(BUILD_SHARED_LIBS)
-    install(TARGETS asp-codec
+    install(TARGETS asp-sort
         DESTINATION lib
         COMPONENT Runtime
         )
@@ -43,7 +44,7 @@ endif()
 if(INSTALL_DEV)
 
     if(NOT BUILD_SHARED_LIBS)
-        install(TARGETS asp-codec
+        install(TARGETS asp-sort
             DESTINATION lib
             COMPONENT Development
             )
@@ -52,7 +53,7 @@ if(INSTALL_DEV)
     if(WIN32)
 
         install(FILES
-            codec.asps
+            sort.asps
             DESTINATION ${CMAKE_INSTALL_PREFIX}/../asp/include/asps
             COMPONENT Development
             )
@@ -60,11 +61,15 @@ if(INSTALL_DEV)
     else()
 
         install(FILES
-            codec.asps
+            sort.asps
             DESTINATION include/asps
             COMPONENT Development
             )
 
     endif()
 
+endif()
+
+if(BUILD_TEST_TARGETS)
+    add_subdirectory(test)
 endif()
