Added a string library that is largely based on Python's string methods. Added top-level library testing infrastructure.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,3 +82,8 @@ endif()
 add_subdirectory(codec)
 add_subdirectory(crc)
 add_subdirectory(sort)
+add_subdirectory(string)
+
+if(BUILD_TEST_TARGETS)
+    add_subdirectory(test)
+endif()
