In the codec and string libraries, added prefixes to the C implementation function names to ensure they are unique within the application. In the crc library, changed the names of the script-callable functions to remove the "crc_" prefix since most developers will import the library rather than including it into the spec.

--- a/crc/CMakeLists.txt
+++ b/crc/CMakeLists.txt
@@ -61,6 +61,7 @@ if(INSTALL_DEV)
 
         install(FILES
             crc.asps
+            crc-prefixed.asps
             DESTINATION ${CMAKE_INSTALL_PREFIX}/../asp/include/asps
             COMPONENT Development
             )
@@ -69,6 +70,7 @@ if(INSTALL_DEV)
 
         install(FILES
             crc.asps
+            crc-prefixed.asps
             DESTINATION include/asps
             COMPONENT Development
             )
