Set up a top-level regression testing environment, replacing the one previously set up for the sort library. Moved all of the sort test scripts into the new top-level testing environment, renaming a modifying as necessary. Added new tests for the crc and string libraries.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,7 @@ add_subdirectory(crc)
 add_subdirectory(sort)
 add_subdirectory(string)
 
+# Test cases.
 if(BUILD_TEST_TARGETS)
     add_subdirectory(test)
 endif()
